--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -2,11 +2,11 @@
   "theme": "light",
   "colorWeak": false,
   "navbar": true,
-  "menu": true,
-  "topMenu": false,
+  "menu": false,
+  "topMenu": true,
   "hideMenu": false,
   "menuCollapse": false,
-  "footer": true,
+  "footer": false,
   "themeColor": "#165DFF",
   "menuWidth": 220,
   "globalSettings": false,
