--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -2,7 +2,7 @@
   "theme": "light",
   "colorWeak": false,
   "navbar": true,
-  "menu": false,
+  "menu": true,
   "topMenu": true,
   "hideMenu": false,
   "menuCollapse": false,
